# Lab_8

task1/: CMakeLists.txt  def.cpp  main.cpp  text.txt
task2/: CMakeLists.txt  hash.cpp  hash.h  main.cpp
task3/: CMakeLists.txt  main.cpp
